# tictactoe

./: .gitignore  CMakeLists.txt  README.md  TicTacToe.sln  TicTacToe.vcxproj  TicTacToe.vcxproj.filters  board.h  decision_tree.h  dicision_tree.h  game.cpp  header_files.h  logic.h
.github/workflows/: cmake-single-platform.yml
engine/: header_files.h
src/: game.cpp
src/engine/: board.h  decision_tree.h  gui.h  header_files.h  logic.h
